# bevy_2d_plaformer

./: Cargo.toml
src/: game_state.rs  main.rs  menu.rs  player.rs  ui.rs
src/ui/: hud.rs  menu.rs
