[package]
name = "game-bevy"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.13.2", features = ["dynamic_linking"] }
bevy-trait-query = "0.5.1"
bevy_asset_loader = "0.20.2"
bevy_kira_audio = { version = "0.19.0", features = ["mp3", "wav"] }
bevy_rapier3d = { version = "0.26.0", features = ["debug-render-3d"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
